# otpuac

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
crates/otpuac-admin/: Cargo.toml
crates/otpuac-admin/src/: main.rs
crates/otpuac-core/: Cargo.toml
crates/otpuac-core/src/: error.rs  ipc.rs  lib.rs  paths.rs  protect.rs  time.rs  totp.rs  vault.rs
crates/otpuac-provider/: Cargo.toml
crates/otpuac-provider-rs/: Cargo.toml
crates/otpuac-provider-rs/src/: lib.rs  windows_provider.rs
crates/otpuac-provider-rs/src/windows_provider/: credential.rs  credential_pack.rs  fields.rs  hresult.rs  ids.rs  ipc.rs  registry.rs  wide.rs
crates/otpuac-provider/src/: lib.rs  windows_provider.rs
crates/otpuac-provider/src/windows_provider/: class_factory.rs  credential.rs  credential_pack.rs  fields.rs  ipc.rs  provider.rs  registry.rs
crates/otpuac-runtime/: Cargo.toml
crates/otpuac-runtime/src/: lib.rs  paths.rs  protect.rs
crates/otpuac-service/: Cargo.toml
crates/otpuac-service/src/: audit.rs  cli.rs  main.rs  state.rs  unlock.rs
crates/otpuac-service/src/platform/: mod.rs  windows_ipc.rs  windows_service_host.rs
crates/otpuac-setup/: Cargo.toml
crates/otpuac-setup/src/: cli.rs  enrollment.rs  install.rs  machine.rs  main.rs  metadata.rs  password.rs  validation.rs
crates/otpuac-setup/src/platform/: mod.rs  windows.rs
crates/otpuac-setup/src/platform/windows/: account.rs  error.rs  event_log.rs  local_alloc.rs  provider.rs  registry.rs  security.rs  service.rs
crates/otpuac-windows/: Cargo.toml
crates/otpuac-windows-support/: Cargo.toml
crates/otpuac-windows-support/src/: lib.rs  wide.rs
crates/otpuac-windows/src/: lib.rs  pipe.rs  protect.rs
docs/: architecture.md  installation.md  operations.md  provider.md  security-model.md
installer/: otpuac.iss
scripts/: build-installer.ps1  build-windows.ps1
