[package]
name = "otpuac-core"
version = "1.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
data-encoding.workspace = true
hmac.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
subtle.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
] }
