[package]
name = "otpuac-provider-rs"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
otpuac-core = { path = "../otpuac-core" }
serde_json.workspace = true
zeroize.workspace = true

[target.'cfg(windows)'.dependencies]
otpuac-windows-support = { path = "../otpuac-windows-support" }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Credentials",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Pipes",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }
