[package]
name = "otpuac-service"
version = "1.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
otpuac-core = { path = "../otpuac-core" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zeroize.workspace = true

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_EventLog",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }
