[package]
name = "otpuac-setup"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
otpuac-core = { path = "../otpuac-core" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
zeroize.workspace = true

[target.'cfg(windows)'.dependencies]
otpuac-windows-support = { path = "../otpuac-windows-support" }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_EventLog",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_System_SystemInformation",
] }
