[package]
name = "otpuac-windows-support"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
otpuac-core = { path = "../otpuac-core" }
serde.workspace = true
zeroize.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }
